update mpd configurations

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -4,7 +4,8 @@ db_file "/home/jack77793/.local/share/mpd/mpd.db"
 log_file "/home/jack77793/.local/share/mpd/mpd.log"
 state_file "/home/jack77793/.local/share/mpd/mpd.state"
 user "jack77793"
-bind_to_address "/run/user/1000/mpd/socket"
+bind_to_address "127.0.0.1"
+port "6600"
 restore_paused "yes"
 auto_update	"yes"
 replaygain "track"
