--- a/mpdris2/.config/mpDris2/mpDris2.conf
+++ b/mpdris2/.config/mpDris2/mpDris2.conf
@@ -1,5 +1,7 @@
 [Connection]
-host = /run/user/1000/mpd/socket
+host = localhost
+port = 6600
+music_dir = /home/jack77793/Music/
 
 [Bling]
 notify = False
