update tmux configurations

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,5 +23,11 @@ setw -g clock-mode-style 24
 set  -s escape-time 500
 set  -g history-limit 1048576
 
+# nvim background colours
 set -g default-command "zsh"
 set -sa terminal-overrides "xterm-256color:Tc"
+
+# yazi image preview
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
