add alacritty terminal overrides for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,6 +26,7 @@ set  -g history-limit 1048576
 # nvim background colours
 set -g default-command "zsh"
 set -sa terminal-overrides "xterm-256color:Tc"
+set -sa terminal-overrides "alacritty:Tc"
 
 # yazi image preview
 set -g allow-passthrough on
