change user name and font size

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -1,9 +1,9 @@
-music_directory "/home/jack77793/Music"
-playlist_directory "/home/jack77793/.local/share/mpd/playlists"
-db_file "/home/jack77793/.local/share/mpd/mpd.db"
-log_file "/home/jack77793/.local/share/mpd/mpd.log"
-state_file "/home/jack77793/.local/share/mpd/mpd.state"
-user "jack77793"
+music_directory "/home/Jack77793/Music"
+playlist_directory "/home/Jack77793/.local/share/mpd/playlists"
+db_file "/home/Jack77793/.local/share/mpd/mpd.db"
+log_file "/home/Jack77793/.local/share/mpd/mpd.log"
+state_file "/home/Jack77793/.local/share/mpd/mpd.state"
+user "Jack77793"
 bind_to_address "127.0.0.1"
 port "6600"
 restore_paused "yes"
@@ -19,6 +19,6 @@ audio_output {
 audio_output {
     type "fifo"
     name "MPD FIFO Output"
-    path "/home/jack77793/.local/share/mpd/mpd.fifo"
+    path "/home/Jack77793/.local/share/mpd/mpd.fifo"
     format "44100:16:2"
 }
