--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -3,7 +3,7 @@ set $left h
 set $down j
 set $up k
 set $right l
-set $term terminal
+set $term $HOME/bin/terminal
 set $menu wofi
 
 bindsym $mod+Return exec $term
@@ -12,8 +12,8 @@ bindsym $mod+c reload
 bindsym $mod+q kill
 bindsym $mod+d exec $menu
 bindsym $mod+f fullscreen
-bindsym $mod+w exec powermenu
-bindsym $mod+p exec powerprofiles
+bindsym $mod+w exec $HOME/bin/powermenu
+#bindsym $mod+p exec $HOME/bin/powerprofiles
 bindsym Ctrl+Space exec fcitx5-remote -t && notify-send "Input methot switched"
 
 bindsym $mod+$left focus left
@@ -93,7 +93,7 @@ input type:touchpad {
 }
 
 #output * bg /home/Jack77793/.config/wallpaper/$(ls /home/Jack77793/.config/wallpaper | shuf -n 1) fill
-output * bg /home/Jack77793/.config/wallpaper/nixos.png fill
+output * bg /home/Jack77793/Pictures/wallpaper/rei.png fill
 
 xwayland enabled
 
@@ -114,10 +114,17 @@ exec gnome-keyring-daemon --start --components=secrets
 exec fcitx5 -d --replace
 exec mako
 exec wl-paste --watch cliphist store
-exec autotiling
+exec $HOME/bin/autotiling
+exec clash-nyanpasu
+exec blueman-applet
 exec swayidle -w \
     timeout 720 'systemctl suspend' \
     before-sleep 'swaylock -i /home/Jack77793/.config/wallpaper/nixos.png -f'
+
+exec /usr/libexec/xdg-desktop-portal-gtk -r
+exec /usr/libexec/xdg-desktop-portal-wlr -r
+exec /usr/libexec/flatpak-portal -r
+exec "sh -c 'sleep 5;exec /usr/libexec/xdg-desktop-portal -r'"
 
 for_window [window_role = "pop-up"] floating enable
 for_window [window_role = "bubble"] floating enable
@@ -147,3 +154,4 @@ for_window [app_id = "firefox" title="画中画"] floating enable, sticky enable
 
 no_focus [app_id = "io.poly000.waylyrics"]
 
+include /etc/sway/config.d/*
