--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -119,7 +119,7 @@ exec clash-nyanpasu
 exec blueman-applet
 exec swayidle -w \
     timeout 720 'systemctl suspend' \
-    before-sleep 'swaylock -i /home/Jack77793/.config/wallpaper/nixos.png -f'
+    before-sleep 'swaylock -i /home/Jack77793/Pictures/wallpaper/rei.png -f'
 
 exec /usr/libexec/xdg-desktop-portal-gtk -r
 exec /usr/libexec/xdg-desktop-portal-wlr -r
