--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -121,7 +121,6 @@ exec fcitx5 -d --replace
 exec mako
 exec wl-paste --watch cliphist store
 exec $HOME/bin/autotiling
-exec blueman-applet
 exec swayidle -w \
     timeout 720 'systemctl suspend' \
     before-sleep 'swaylock -i /home/Jack77793/Pictures/wallpaper/rei.png -f'
@@ -130,6 +129,8 @@ exec /usr/libexec/xdg-desktop-portal-gtk -r
 exec /usr/libexec/xdg-desktop-portal-wlr -r
 exec /usr/libexec/flatpak-portal -r
 exec "sh -c 'sleep 5;exec /usr/libexec/xdg-desktop-portal -r'"
+
+exec $HOME/bin/autostart
 
 for_window [window_role = "pop-up"] floating enable
 for_window [window_role = "bubble"] floating enable
