update sway configurations

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -154,7 +154,7 @@ for_window [app_id = "floating_update"] floating enable, resize set width 1000px
 for_window [app_id = "termfloat"] floating enable, resize set width 1280px height 800px
 for_window [app_id = "imv"] floating enable, resize set width 1280px height 800px, border normal 3
 for_window [app_id = "mpv"] floating enable, resize set width 1280px height 800px
-for_window [app_id = "Waydroid"] floating enable, resize set width 1882px height 1000px, border normal 3
+for_window [app_id = "Waydroid"] floating enable, resize set width 1882px height 1000px, border pixel 3
 for_window [app_id = "io.poly000.waylyrics"] floating enable, border none, sticky enable
 for_window [class = "wemeetapp"] floating enable
 for_window [class = ".scrcpy*"] floating enable
