--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -4,8 +4,7 @@ cache-on-disk=no
 cache-secs=300
 cscale=ewa_lanczossharp
 embeddedfonts=no
-glsl-shaders=
-hwdec=no
+hwdec=vaapi
 icc-profile-auto=yes
 interpolation=yes
 profile=high-quality
