--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -1,6 +1,6 @@
 font=monospace 14
-background-color=#d8dee9
-text-color=#3b4252
+background-color=#3b4252
+text-color=#d8dee9
 width=350
 margin=10
 padding=5
