--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -99,7 +99,7 @@ input type:touchpad {
 #output * bg /home/Jack77793/.config/wallpaper/$(ls /home/Jack77793/.config/wallpaper | shuf -n 1) fill
 output * {
     adaptive_sync on
-    bg /home/Jack77793/Pictures/wallpaper/amagi.jpg fill
+    bg /home/Jack77793/Pictures/wallpaper/rei.png fill
 }
 
 xwayland enabled
@@ -124,14 +124,13 @@ exec mako
 exec wl-paste --watch cliphist store
 exec kdeconnect-indicator
 exec $HOME/bin/autotiling
-exec swayidle -w timeout 720 "systemctl suspend" before-sleep "swaylock -i /home/Jack77793/Pictures/wallpaper/amagi.jpg -f"
+exec blueman-applet
+exec swayidle -w timeout 720 "systemctl suspend" before-sleep "swaylock -i /home/Jack77793/Pictures/wallpaper/rei.png -f"
 
 exec /usr/libexec/xdg-desktop-portal-gtk -r
 exec /usr/libexec/xdg-desktop-portal-wlr -r
 exec /usr/libexec/flatpak-portal -r
 exec "sh -c 'sleep 5; exec /usr/libexec/xdg-desktop-portal -r'"
-
-exec $HOME/bin/autostart
 
 for_window [window_role = "pop-up"] floating enable
 for_window [window_role = "bubble"] floating enable
@@ -150,9 +149,11 @@ for_window [app_id = "termfloat"] floating enable, resize set width 1280px heigh
 
 for_window [app_id = "imv"] floating enable, resize set width 1280px height 800px, border normal 3
 for_window [app_id = "mpv"] floating enable, resize set width 1280px height 800px
-for_window [app_id = "Waydroid"] floating enable, resize set width 1882px height 1000px, border pixel 3
+for_window [app_id = "Waydroid"] floating enable, resize set width 1885px height 981px, border pixel 3
 for_window [class = "wemeetapp"] floating enable
 for_window [class = "explorer.exe"] floating enable
 for_window [class = "scrcpy"] floating enable
 for_window [class = "org.jackhuang.hmcl.Launcher"] border none
 for_window [app_id = "thunar" title="Rename*"] floating enable
+
+include /etc/sway/config.d/*
