update mpv configurations

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -14,3 +14,4 @@ sub-ass-style-overrides=FontName=Sarasa Term SC
 sub-auto=fuzzy
 tscale=oversample
 video-sync=display-resample
+ytdl-raw-options=cookies-from-browser=firefox
