--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -60,22 +60,22 @@ text = "#2e3440"
 size = 15
 
 [font.bold]
-family = "monospace"
+family = "SarasaTermSC Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "monospace"
+family = "SarasaTermSC Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "monospace"
+family = "SarasaTermSC Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "monospace"
+family = "SarasaTermSC Nerd Font"
 style = "Regular"
 
-[shell]
+[terminal.shell]
 program = "zsh"
 
 [window]
