--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,4 +1,5 @@
 audio-pitch-correction=yes
+border=no
 cache=yes
 cache-on-disk=no
 cache-secs=300
@@ -7,6 +8,7 @@ embeddedfonts=no
 hwdec=vaapi
 icc-profile-auto=yes
 interpolation=yes
+osd-bar=no
 profile=high-quality
 scale=ewa_lanczossharp
 screenshot-format=png
