add mpv script MPV-Play-BiliBili-Comments

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -14,5 +14,6 @@ screenshot-format=png
 sub-ass-style-overrides=FontName=Sarasa Term SC
 sub-auto=fuzzy
 tscale=oversample
+vf=lavfi="fps=fps=60:round=down"
 video-sync=display-resample
 ytdl-raw-options=cookies-from-browser=firefox
