update mpv configurations

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,5 +1,5 @@
 audio-pitch-correction=yes
-border=no
+border=yes
 cache=yes
 cache-on-disk=no
 cache-secs=300
@@ -16,5 +16,6 @@ sub-ass-style-overrides=FontName=Sarasa Term SC
 sub-auto=fuzzy
 tscale=oversample
 vf=lavfi="fps=fps=60:round=down"
+volume-max=100
 video-sync=display-resample
 ytdl-raw-options=cookies-from-browser=firefox
