--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -21,7 +21,7 @@
         "custom/powermenu"
     ],
     "custom/launcher": {
-        "format": " ",
+        "format": "■",
         "on-click": "pkill wofi || wofi",
         "tooltip": false
     },
@@ -36,8 +36,8 @@
     "idle_inhibitor": {
         "format": "{icon}",
         "format-icons": {
-            "activated": "󰈈",
-            "deactivated": "󰈉"
+            "activated": "ON",
+            "deactivated": "OFF"
         },
         "tooltip": false
     },
@@ -45,26 +45,22 @@
         "device": "intel_backlight",
         "on-scroll-up": "light -A 5",
         "on-scroll-down": "light -U 5",
-        "format": "{icon} {percent}%",
-        "format-icons": ["󱩎","󱩏","󱩐","󱩑","󱩒","󱩓","󱩔","󱩕","󱩖","󰛨"]
+        "format": "LIT: {percent}%",
     },
     "bluetooth": {
-        "format-on": "󰂯 {status}",
-        "format-disabled": "󰂲 {status}",
-        "format-off": "󰂲 {status}",
-        "format-connected": "󰂱 {device_alias}",
-        "format-connected-battery": "󰂱 {device_alias} {device_battery_percentage}%",
+        "format-on": "BT: {status}",
+        "format-disabled": "BT: {status}",
+        "format-off": "BT: {status}",
+        "format-connected": "BT: {device_alias}",
+        "format-connected-battery": "BT: {device_alias} {device_battery_percentage}%",
         "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
         "on-click-right": "blueman-manager"
     },
     "wireplumber": {
-        "format": "{icon} {volume}%",
-        "format-muted": "󰝟 Muted",
+        "format": "VOL: {volume}%",
+        "format-muted": "VOL: Muted",
         "on-click-right": "helvum",
         "scroll-step": 5,
-        "format-icons": {
-            "default": ["󰕿", "󰖀", "󰕾"]
-        },
         "tooltip": false
     },
     "battery": {
@@ -73,10 +69,7 @@
             "warning": 30,
             "critical": 15
         },
-        "format": "{icon} {capacity}%",
-        "format-icons": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂"],
-        "format-full": "󰁹 {capacity}%",
-        "format-charging": "󰂄 {capacity}%",
+        "format": "BAT: {capacity}%",
         "tooltip": false
     },
     "clock": {
@@ -87,16 +80,16 @@
     },
     "memory": {
         "interval": 1,
-        "format": "󰄫 {percentage}%",
-        "on-click-right": "alacritty --class=\"termfloat\" -e btop",
+        "format": "MEM: {percentage}%",
+        "on-click-right": "alacritty --class=\"termfloat\" -e htop",
         "states": {
             "warning": 85
         }
     },
     "cpu": {
         "interval": 1,
-        "format": "󰍛 {usage}%",
-        "on-click-right": "alacritty --class=\"termfloat\" -e btop",
+        "format": "CPU: {usage}%",
+        "on-click-right": "alacritty --class=\"termfloat\" -e htop",
         "states": {
             "warning": 85
         }
@@ -116,14 +109,14 @@
     },
     "network": {
         "interval": 1,
-        "format-wifi": "󰖩  {essid} ({ipaddr})",
-        "format-ethernet": "󰈀  {ifname} ({ipaddr})",
-        "format-linked": "󰈀  {essid} (No IP)",
-        "format-disconnected": "󰖪  Disconnected",
+        "format-wifi": "NET: {essid}",
+        "format-ethernet": "NET: Wired",
+        "format-linked": "NET: {essid} (No IP)",
+        "format-disconnected": "NET: Disconnected",
         "tooltip": false
     },
     "custom/powermenu": {
-        "format": "⏻",
+        "format": "■",
         "on-click": "pkill wofi || $HOME/bin/powermenu",
         "tooltip": false
     },
