--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -155,5 +155,8 @@ for_window [class = "explorer.exe"] floating enable
 for_window [class = "scrcpy"] floating enable
 for_window [class = "org.jackhuang.hmcl.Launcher"] border none
 for_window [app_id = "thunar" title="Rename*"] floating enable
+for_window [app_id = "org.telegram.desktop" title="Media viewer"] floating enable, resize set width 1280px height 800px, border pixel 3
+for_window [class = "QQ" title="图片查看器"] floating enable, resize set width 1280px height 800px, border pixel 3
+for_window [class = "QQ" title="视频播放器"] floating enable, resize set width 1280px height 800px, border pixel 3
 
 include /etc/sway/config.d/*
