update mpv configurations

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -16,6 +16,7 @@ sub-ass-style-overrides=FontName=Sarasa Term SC
 sub-auto=fuzzy
 tscale=oversample
 vf=lavfi="fps=fps=60:round=down"
+vo=dmabuf-wayland
 volume-max=100
 video-sync=display-resample
-ytdl-raw-options=cookies-from-browser=firefox
+ytdl-raw-options=cookies-from-browser=chromium
