update mpv configurations

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -19,4 +19,4 @@ vf=lavfi="fps=fps=60:round=down"
 vo=dmabuf-wayland
 volume-max=100
 video-sync=display-resample
-ytdl-raw-options=cookies-from-browser=chromium
+ytdl-raw-options=cookies-from-browser=chromium,format=bv[vcodec^=hev]+ba
