update mpv configurations

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -5,7 +5,7 @@ cache-on-disk=no
 cache-secs=300
 cscale=ewa_lanczossharp
 embeddedfonts=no
-hwdec=vaapi
+hwdec=vaapi-copy
 icc-profile-auto=yes
 interpolation=yes
 osd-bar=no
@@ -15,8 +15,9 @@ screenshot-format=png
 sub-ass-style-overrides=FontName=Sarasa Term SC
 sub-auto=fuzzy
 tscale=oversample
+vaapi-device=/dev/dri/renderD128
 vf=lavfi="fps=fps=60:round=down"
 vo=dmabuf-wayland
 volume-max=100
 video-sync=display-resample
-ytdl-raw-options=cookies-from-browser=chromium,format=bv[vcodec^=hev]+ba
+ytdl-raw-options=cookies-from-browser=chromium
