--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -21,8 +21,25 @@
     </match>
 
     <!-- Map fonts that are commonly used by web pages to our preferred fonts -->
+
+    <match target="pattern">
+        <test qual="any" name="family"><string>BlinkMacSystemFont</string></test>
+        <edit name="family" mode="assign" binding="same"><string>sans-serif</string></edit>
+    </match>
+
     <match target="pattern">
         <test qual="any" name="family"><string>Arial</string></test>
+        <edit name="family" mode="assign" binding="same"><string>sans-serif</string></edit>
+    </match>
+
+    <!-- https://www.zhihu.com -->
+    <match target="pattern">
+        <test qual="any" name="family"><string>Helvetica Neue</string></test>
+        <edit name="family" mode="assign" binding="same"><string>sans-serif</string></edit>
+    </match>
+
+    <match target="pattern">
+        <test qual="any" name="family"><string>Inter</string></test>
         <edit name="family" mode="assign" binding="same"><string>sans-serif</string></edit>
     </match>
 
@@ -61,7 +78,7 @@
             <string>serif</string>
         </test>
         <edit name="family" mode="prepend" binding="same">
-            <string>Source Han Serif CN</string>
+            <string>Noto Serif CJK SC</string>
         </edit>
     </match>
 
@@ -83,15 +100,17 @@
             <family>Sarasa Fixed TC</family>
             <family>Sarasa Fixed J</family>
             <family>Sarasa Fixed K</family>
+            <family>Noto Sans</family>
         </prefer>
     </alias>
     <alias>
         <family>serif</family>
         <prefer>
-            <family>Source Han Serif CN</family>
-            <family>Source Han Serif TW</family>
-            <family>Source Han Serif JP</family>
-            <family>Source Han Serif KR</family>
+            <family>Noto Serif CJK SC</family>
+            <family>Noto Serif CJK TC</family>
+            <family>Noto Serif CJK JP</family>
+            <family>Noto Serif CJK KR</family>
+            <family>Noto Serif</family>
         </prefer>
     </alias>
     <alias>
