update fontconfig configurations

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -53,6 +53,11 @@
         <edit name="family" mode="assign" binding="same"><string>monospace</string></edit>
     </match>
 
+    <match target="pattern">
+        <test qual="any" name="family"><string>KaiTi</string></test>
+        <edit name="family" mode="assign" binding="same"><string>AR PL UKai CN</string></edit>
+    </match>
+
     <!-- Default font for the zh_CN locale (no fc-match pattern) -->
     <match>
         <test compare="contains" name="lang">
